--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,46 @@
     color: red;
     border: 1px solid black;
 }
+html,
+body{
+    margin:0;
+    padding:0;
+    width: 100%;
+}
 .body{
-    font-size: 30px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    min-width: 100vh;
+    padding-top: 147px;
+}
+
+.page-header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 147px;
+    background-color: rgba(222, 222, 222, 0.5);
+    backdrop-filter: blur(20px);
+}
+
+.page-header__container{
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    padding-left: 40px;
+    padding-right: 40px;
+    max-width: 1414px;
+    width: 100%;
+    margin: 0 auto;
+}
+.main{
+    flex: 1 0 auto;
+    background-color: black;
+}
+.page-footer{
+    flex: 0 0 auto;
+    background-color: rgb(212, 142, 51);
+
 }
