--- a/src/styles/blocks/article_card.less
+++ b/src/styles/blocks/article_card.less
@@ -1,4 +1,54 @@
 .article-card {
+  box-sizing: border-box;
+  display: flex;
+  width: 100%;
+  &:hover {
+    .article-card__picture {
+      box-shadow: 0 0 30px fade(@black, 55%);
+    }
+  }
+  &__link {
+    flex-shrink: 0;
+    align-self: flex-start;
+    display: block;
+    width: 467px;
+    margin-right: 60px;
+    font-size: 0;
+    text-decoration: none;
+    &:hover {
+      & ~ .article-card__info {
+        .article-card__title-link {
+          color: @red;
+          text-decoration-color: @red;
+        }
+      }
+    }
+}
+  }
+  &__picture {
+    display: block;
+    position: relative;
+    width: 100%;
+    transition: box-shadow 0.2s;
+    overflow: hidden;
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      padding-top: 62.3126%;
+    }
+  }
+  &__img {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+.article-card {
     &__info {
       box-sizing: border-box;
       position: relative;
@@ -9,6 +59,22 @@
       padding-bottom: 30px;
       padding: 30px 0;
       padding-right: 150px;
+      & + .article-card {
+        margin-top: 120px;
+        &::before {
+          content: "";
+          display: block;
+          position: absolute;
+          margin: 0 auto 60px;
+          bottom: 100%;
+          left: 0;
+          right: 0;
+          width: 100%;
+          max-width: 1254px;
+          height: 1px;
+          background-color: @black;
+          pointer-events: none;
+        }
     }
     &__time {
       margin: 0 0 40px;
@@ -50,3 +116,4 @@
       transition: none;
     }
   }
+}
