--- a/src/styles/global/common.less
+++ b/src/styles/global/common.less
@@ -8,7 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: @gray;
+  background-color: @grey;
   background-image: url(../assets/images/noise.png), url(../assets/images/bg.png);
   background-position: 0 0, 0 0;
   background-size: auto, 100% auto;
@@ -36,4 +36,30 @@ img {
   max-width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+input,
+select,
+textarea{
+  outline: none;
+  box-shadow: none;
+  font-family: @font1;
+  color: @black;
+}
+
+textarea{
+  resize: none;
+}
+input,
+textarea{
+  &::placeholder{
+    color: @grey;
+  }
+}
+
+input::focus,
+textarea::focus{
+  &::placeholder{
+    color: transparent;
+  }
 }
