--- a/src/styles/blocks/event-card.less
+++ b/src/styles/blocks/event-card.less
@@ -20,19 +20,21 @@
 
     &__picture{
         display: block;
-        margin: 0 0 25px;
         position: relative;
+        margin: 0 0 25px;
         width: 100%;
         font-size: 0;
+        text-decoration: none;
+        overflow: hidden;
+        &::after {
+            content: '';
+            display: block;
+            width: 100%;
+            padding-top: 107.16%;
+        }
     }
-    &__picture::after {
-        content: '';
-        display: block;
-        width: 100%;
-        padding-top: 107.16%;
-    }
-
     &__img{
+        display: block;
         position: absolute;
         top: 0;
         left: 0;
@@ -60,12 +62,11 @@
     }
 
     &__time{
-        display: block;
+        
         margin-top: 15px;
+        font-size: 14px;
+        line-height: 19px;
+        font-weight: 300;
     
-    }
-
-    .listing__event-card{
-        width: calc(33.333% - 40px);
     }
 }
