--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -11,3 +11,10 @@
 @import "blocks/event.less";
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
+@import "blocks/field.less";
+@import "blocks/pp.less";
+@import "blocks/form.less";
+@import "blocks/article-card.less";
+@import "blocks/radio.less";
+@import "global/mixins.less";
+@import "blocks/check.less";
