--- a/src/styles/blocks/field.less
+++ b/src/styles/blocks/field.less
@@ -10,6 +10,7 @@
         width: 100%;
         background-color: #fff;
         border-radius: 5px;
+        border: none;
         font-weight: 400px;
         font-size: 16px;
         line-height: 1.375;
@@ -50,5 +51,25 @@
         font-size: 16px;
         line-height: 1.375;
         color: @black;
+    }
+    &__date-inputs{
+        display: flex;
+        gap: 15px;
+    }
+    &__date-input{
+        box-sizing: border-box;
+        display: block;
+        background-color: #fff;
+        border-radius: 5px;
+        text-align: center;
+        font-weight: 400px;
+        font-size: 16px;
+        line-height: 1.375;
+        width: 55px;
+        height: 55px;
+        padding: 17px 13px 16px;
+        &--w110{
+            width: 110px;
+        }
     }
 }
